# SM-CUBE

./: README.md  pyproject.toml
meat_packing_agent/: __init__.py  train.py
meat_packing_agent/agent/: __init__.py  ppo_agent.py
meat_packing_agent/api/: __init__.py  main.py
meat_packing_agent/dashboard/: index.html  simulator.html  simulator.js
meat_packing_agent/data/: __init__.py  slice_database.py  slices_1000.json  slices_10000.json
meat_packing_agent/env/: __init__.py  cube_environment.py
meat_packing_agent/robot/: __init__.py  fanuc_interface.py
meat_packing_agent/tests/: test_100_cubes.py
meat_packing_agent/training/: train_1000_cubes.py  training_results.json
meat_packing_agent/vision/: __init__.py  lidar_processor.py
